--- a/text-editor.css
+++ b/text-editor.css
@@ -1,3 +1,7 @@
+.hidden {
+    display: none; !important;
+}
+
 body {
     background-image: linear-gradient(135deg, #363636, black);
     height: 100%;
@@ -24,3 +28,42 @@ body {
     padding: 20px;
     margin: 3px 10px 0 20px;
 }
+
+#download-file {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 30%;
+}
+
+#download-file button {
+    font-family: "JetBrains Mono", sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    color: #ffffff;
+    border: 5px solid #e18c00;
+    border-radius: 10px;
+    background-color: #ffb14f;
+    width: fit-content;
+    padding: 15px 10px;
+    margin: 0 25% 0 25%;
+}
+
+#download-file h2 {
+    text-align: center;
+    font-family: 'JetBrains Mono', sans-serif;
+    font-size: 50px;
+    margin-top: -30px;
+    color: white;
+}
+
+#loader {
+    margin: 0 auto;
+    width: 100px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 8px solid lightblue;
+    border-right-color: orange;
+    animation: l2 1s infinite linear;
+}
+@keyframes l2 {to{transform: rotate(1turn)}}
