--- a/index.css
+++ b/index.css
@@ -1,17 +1,55 @@
 body {
-    background-color: #e15400;
+    background-color: #ffffff;
+    overflow-x: hidden;
+    background-image: linear-gradient(135deg, lightgray, #afafaf);
+}
+
+#navbar {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    width: 100%;
+    height: 100px;
+}
+
+.nav-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 34px;
+    font-weight: 600;
+    width: fit-content;
+    height: fit-content;
+    padding: 12px 10px;
+    background-image: linear-gradient(135deg, #e18c00, #ff8443);
+    border: 3px solid #ff6513;
+    border-radius: 10px;
+}
+
+.nav-button a:link {
+    text-decoration: none;
+    color: white;
+}
+
+.nav-button a:visited {
+    color: white;
+}
+
+#show-off {
+    display: flex;
+    flex-direction: row;
 }
 
 #title-text {
     font-family: 'Montserrat', sans-serif;
     display: flex;
     flex-direction: column;
-    background-color: #e18c00;
+    background-image: linear-gradient(135deg, #e18c00, #ff6513);
     border-radius: 20px;
     max-width: fit-content;
     max-height: fit-content;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 20px auto;
 }
 
 #description {
@@ -40,4 +78,82 @@ body {
 
 #second {
     text-align: left;
+}
+
+#features {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto 0 20px;
+}
+
+#features h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 60px;
+    text-align: center;
+    background-image: linear-gradient(135deg, #e18c00, #ff8443);
+    border: 3px solid #ff8443;
+    border-radius: 50px;
+    color: white;
+    padding: 10px 10px;
+    width: 470px;
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+}
+
+#features h2:nth-child(1) {
+    animation-delay: 1s;
+}
+
+#features h2:nth-child(2) {
+    animation-delay: 2s;
+}
+
+#features h2:nth-child(3) {
+    animation-delay: 3s;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0
+    }
+    to {
+        opacity: 1
+    }
+}
+
+#more-features {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(135deg, #e18c00, #ff6513);
+    border-radius: 20px;
+    margin-top: 100px;
+}
+
+#more-features p {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 45px;
+    font-weight: 600;
+    color: white;
+    animation: fadeIn 1s forwards;
+    opacity: 0;
+}
+
+#more-features p:nth-child(1) {
+    animation-delay: 4s;
+}
+
+#more-features p:nth-child(2) {
+    animation-delay: 6s;
+}
+
+#more-features p:nth-child(3) {
+    animation-delay: 8s;
+}
+
+#more-features p:nth-child(4) {
+    animation-delay: 10s;
 }
